k8s/0-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sopes3
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
