k8s/8-consumers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  namespace: sopes3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
    spec:
      containers:
      - name: kafka-consumer
        image: golang:alpine
        command: ["sh", "-c", "while true; do echo 'Kafka Consumer simulado funcionando...'; sleep 10; done"]
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbit-consumer
  namespace: sopes3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbit-consumer
  template:
    metadata:
      labels:
        app: rabbit-consumer
    spec:
      containers:
      - name: rabbit-consumer
        image: golang:alpine
        command: ["sh", "-c", "while true; do echo 'RabbitMQ Consumer simulado funcionando...'; sleep 10; done"]
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
