k8s/2-api-rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust
  namespace: sopes3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
      - name: api-rust
        image: docker.io/ekiojp/rust-alpine:latest
        command: ["sh", "-c", "while true; do echo 'API Rust simulada funcionando...'; sleep 10; done"]
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
  namespace: sopes3
spec:
  selector:
    app: api-rust
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
