k8s/4-go-writer-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service-kafka-writer
  namespace: sopes3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-service-kafka-writer
  template:
    metadata:
      labels:
        app: go-service-kafka-writer
    spec:
      containers:
      - name: go-service-kafka-writer
        image: golang:alpine
        command: ["sh", "-c", "while true; do echo 'Kafka Writer simulado funcionando...'; sleep 10; done"]
        ports:
        - containerPort: 50051
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service-kafka-writer
  namespace: sopes3
spec:
  selector:
    app: go-service-kafka-writer
  ports:
  - port: 50051
    targetPort: 50051
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service-rabbit-writer
  namespace: sopes3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-service-rabbit-writer
  template:
    metadata:
      labels:
        app: go-service-rabbit-writer
    spec:
      containers:
      - name: go-service-rabbit-writer
        image: golang:alpine
        command: ["sh", "-c", "while true; do echo 'RabbitMQ Writer simulado funcionando...'; sleep 10; done"]
        ports:
        - containerPort: 50052
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: go-service-rabbit-writer
  namespace: sopes3
spec:
  selector:
    app: go-service-rabbit-writer
  ports:
  - port: 50052
    targetPort: 50052
  type: ClusterIP
