k8s/6-rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: sopes3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672
          name: amqp
        - containerPort: 15672
          name: management
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
          requests:
            cpu: "300m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: sopes3
spec:
  ports:
  - port: 5672
    name: amqp
    targetPort: 5672
  - port: 15672
    name: management
    targetPort: 15672
  selector:
    app: rabbitmq
