k8s/7-valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: sopes3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
      - name: valkey
        image: redis/valkey:7.2
        args: ["--save", "60", "1", "--appendonly", "yes"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: valkey-data
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
      volumes:
      - name: valkey-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: sopes3
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: valkey
